css/style.css
html {
	box-sizing: border-box;
}
*,
*:before,
*:after {
	box-sizing: inherit;
}
.clearfix:after {
	display: block;
	height: 0;
	clear: both;
	line-height: 0;
	content: ".";
	visibility: hidden;
}

/* styles here */
html{
	/* All font-sizes on the page using "rems" will be relative to this value here */
	font-size: 16px;
}
body{
	font-size: 1em;
	font-family: Helvetica, Arial, sans-serif;
	color: #666;
	background-color: transparent;
	background-image: url("dots.png");	
}

hr.lines { 
  border: 0; 
  height: 1px; 
  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
}

a{
	color: #1d2124;
}

button {
	background-color: #f7eeef;
	color: gray; 
}

.south{
	background-color: rgba(248,248,248,1)

}
.site{
	background-color: white;
}

 h3, h4{
	color: #4682b4;
}
/*body{
	background: url(".img/dots.jpeg");
	}*/

/* Typography */
h1,
h2,
h3,
h4,
h5,
h6{
	font-family: Helvetica, Arial, sans-serif;
	font-weight: bold;
	margin: 0 0 10px 0;
}
h1 { font-size: 2.074rem; }
h2 { font-size: 1.728rem; }
h3 { font-size: 1.44rem; }
h4 { font-size: 1.2rem; }
h5 { font-size: 1.0rem; }
h6 { font-size: 0.75rem; }

p{
	font-family: Helvetica, Arial, sans-serif;
	font-weight: normal;
	font-size: 1rem;
	line-height: 22px;
	margin: 0 0 10px 0;
}
p:last-child{
	margin-bottom: 0;
}


/* Layout */
.site{
	border-right:  1px solid #ccc;
	border-left: 1px solid #ccc;
	padding: 20px;
	width: 960px;
	margin: 0 auto;
}

/*.north,*/
.hero,
.about,
.features,
.south{

	margin: 0 0 10px 0;
	padding: 10px;
}

.north{
	background: #fff;
	margin: 0 0 10px 0;
	padding: 10px;
}

.logo{
	display: center;
}

.info nav ul {
    padding: 0;
}

.info nav ul li {
    display: inline;
    margin: 5px;
}

.menu{
		display: inline;
    margin: 5px;

}
.main-navigation ul li a{
		text-decoration: none;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    
}

.main-navigation li {
    float: left;
}

.main-navigation li{
    display: block;
    color: black;
    text-align: center;
    padding: 10px 8px;
    

    
}

.main-navigation ul li a:hover{
		background: #efefef;
		color: #333
		text-decoration: none;
	
}



.img-fluid{
		display: block;
		width: 100%;
		height: 230px;
}

.hero{
	height: 250px;
}

.
.hero h2{
	text-align: center;
	margin: 0;
	line-height: 234px;
}

.about{
	text-align: left;
}


.features .feature{
	float: left;
	display: inline;
	width: 25%;
	padding: 10px;
}

.features .feature .inner{
	height: 200px;
	padding: 10px;
}

.feature_img{
	width: 85%;
	
}

.feature p{
	text-align: center;
}


.menu ul li{
	text-align: left;
	list-style:none;
 	padding:0;
 	float:center; padding:5px 0; 
 	font-weight:normal;
}
.menu ul {
	display: inline-block;
}

.left_menu{
	float: left;
	width: 70%;
	padding: 5px;

}
.social {
	float: right;
	width:  30%;
}

.social li{
	float: right;
	display: inline-block;
}

.social img{
	padding: 5px;

}

.south p{
	font-size: 12px;
	text-transform: uppercase;
	font-weight: bold;
}







/* When your screen becomes 960px wide or less, run all of the CSS below */
@media screen and (max-width: 960px) {
	html{
		font-size: 14px;
	}
	.site{
		width: 100%;
	}
}


/* When your screen becomes 768px wide or less, run all of the CSS below */
@media screen and (max-width: 768px) {
	html{
		font-size: 18px;
	}
	/*.logo{
		width: 100%;
		margin: 0 0 10px 0;
		text-align: center;
	}*/

	
	/*.main-navigation{
		width: 100%;
		margin: 0;
		padding: 0;
	}
	.main-navigation ul li{
		margin: 0 0 10px 0;
		width: 100%;
		padding: 0;
	}
	.main-navigation ul li:last-child{
		margin-bottom: 0;
	}*/


	.features .feature{
		width: 100%;
		padding: 0;
		margin: 0 0 10px 0;
		text-align: center;
	}
	.features .feature .inner{
		height: auto;
	}
	.left_menu li{
		margin: 0 0 10px 0;
		width: 100%;
		padding: 0;
	}

	.social{
		margin: 0 0 10px 0;
		width: 100%;
		padding: 0;

	}
}

